<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_multiplayer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.comp211.quiz.Multiplayer"
    tools:showIn="@layout/activity_multiplayer">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mpQuestions"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/questionNumberTextView"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:textAlignment="center" />

    <!--The below needs to be changed to include the math question.-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/mathsQuestionTextView"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:contentDescription="Maths question"
        android:textColor="#ff80ab"
        android:textSize="60sp"
        android:scaleType="fitCenter"
        android:gravity="center_vertical"/>

    <!--The above needs to be changed to include the math question.-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/answer_question"
        android:id="@+id/solveQuestionTextView"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/row1LinearLayout">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="New Button"
            android:id="@+id/button"
            android:layout_weight="1"
            android:lines="2"
            style="@android:style/Widget.Material.Button.Colored"
            android:textColor="@color/button_text_color"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="New Button"
            android:id="@+id/button2"
            android:layout_weight="1"
            android:lines="2"
            style="@android:style/Widget.Material.Button.Colored"
            android:textColor="@color/button_text_color"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/row2LinearLayout">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="New Button"
            android:id="@+id/button3"
            android:layout_weight="1"
            android:lines="2"
            style="@android:style/Widget.Material.Button.Colored"
            android:textColor="@color/button_text_color"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="New Button"
            android:id="@+id/button4"
            android:layout_weight="1"
            android:lines="2"
            style="@android:style/Widget.Material.Button.Colored"
            android:textColor="@color/button_text_color"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/row3LinearLayout">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="New Button"
            android:id="@+id/button5"
            android:layout_weight="1"
            android:lines="2"
            style="@android:style/Widget.Material.Button.Colored"
            android:textColor="@color/button_text_color"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="New Button"
            android:id="@+id/button6"
            android:layout_weight="1"
            android:lines="2"
            style="@android:style/Widget.Material.Button.Colored"
            android:textColor="@color/button_text_color" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/answerIsCorrect"
        android:id="@+id/answerTextView"
        android:layout_gravity="bottom|center_horizontal"
        android:gravity="center_horizontal"
        android:textSize="@dimen/answer_size"
        android:textStyle="bold" />

</LinearLayout>
